Add results by person
Plus a lot of refactoring

--- a/wocdb-routes.ini
+++ b/wocdb-routes.ini
@@ -1,8 +1,11 @@
 [routes]
-GET /woc/@year/@class/@race [ajax] = Woc->getWOCRace
-GET /jwoc/@year/@class/@race [ajax] = Woc->getJWOCRace
+GET /woc/@year/@class/@race [ajax] = Race->getWOCRace
+GET /jwoc/@year/@class/@race [ajax] = Race->getJWOCRace
+GET /person/@person [ajax] = Person->getResultsByPerson
 
-GET /woc/@year/@class/@race [sync] = Woc->getStartPageWithWOCRace
-GET /jwoc/@year/@class/@race [sync] = Woc->getStartPageWithJWOCRace
+GET /woc/@year/@class/@race [sync] = Race->getStartPageWithWOCRace
+GET /jwoc/@year/@class/@race [sync] = Race->getStartPageWithJWOCRace
+GET /person/@person [sync] = Person->getStartPageWithResultsByPerson
+
 
 GET * [sync] = Woc->getStartPage
