--- a/wocdb-routes.ini
+++ b/wocdb-routes.ini
@@ -2,10 +2,11 @@
 GET /woc/@year/@class/@race [ajax] = Race->getWOCRace
 GET /jwoc/@year/@class/@race [ajax] = Race->getJWOCRace
 GET /person/@person [ajax] = Person->getResultsByPerson
+GET /runners/@type/@country [ajax] = Result->getRunnersByCountry
 
 GET /woc/@year/@class/@race [sync] = Race->getStartPageWithWOCRace
 GET /jwoc/@year/@class/@race [sync] = Race->getStartPageWithJWOCRace
 GET /person/@person [sync] = Person->getStartPageWithResultsByPerson
-
+GET /runners/@type/@country [sync] = Result->getStartPageWithRunnersByCountry
 
 GET * [sync] = Woc->getStartPage
