--- a/wocdb-routes.ini
+++ b/wocdb-routes.ini
@@ -3,10 +3,12 @@ GET /woc/@year/@class/@race [ajax] = Race->getWOCRace
 GET /jwoc/@year/@class/@race [ajax] = Race->getJWOCRace
 GET /person/@person [ajax] = Person->getResultsByPerson
 GET /runners/@type/@country [ajax] = Result->getRunnersByCountry
+GET /best/@country/@type/@class/@race [ajax] = Result->getBestResults
 
 GET /woc/@year/@class/@race [sync] = Race->getStartPageWithWOCRace
 GET /jwoc/@year/@class/@race [sync] = Race->getStartPageWithJWOCRace
 GET /person/@person [sync] = Person->getStartPageWithResultsByPerson
 GET /runners/@type/@country [sync] = Result->getStartPageWithRunnersByCountry
+GET /best/@country/@type/@class/@race [sync] = Result->getStartPageWithBestResults
 
 GET * [sync] = Woc->getStartPage
