name search added

--- a/wocdb-routes.ini
+++ b/wocdb-routes.ini
@@ -4,11 +4,14 @@ GET /jwoc/@year/@class/@race [ajax] = Race->getJWOCRace
 GET /person/@person [ajax] = Person->getResultsByPerson
 GET /runners/@type/@country [ajax] = Result->getRunnersByCountry
 GET /best/@country/@type/@class/@race [ajax] = Result->getBestResults
+GET /medals/@group/@type/@class/@race [ajax] = Result->getMedals
+GET /namesearch/@text [ajax]  = Name->nameSearch
 
 GET /woc/@year/@class/@race [sync] = Race->getStartPageWithWOCRace
 GET /jwoc/@year/@class/@race [sync] = Race->getStartPageWithJWOCRace
 GET /person/@person [sync] = Person->getStartPageWithResultsByPerson
 GET /runners/@type/@country [sync] = Result->getStartPageWithRunnersByCountry
 GET /best/@country/@type/@class/@race [sync] = Result->getStartPageWithBestResults
+GET /medals/@group/@type/@class/@race [sync] = Result->getStartPageWithMedals
 
 GET * [sync] = Woc->getStartPage
