--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "grunt-contrib-csslint": "^2.0.0",
     "grunt-contrib-jshint": "^1.1.0",
     "grunt-contrib-uglify": "^3.0.1",
-    "grunt-jslint": "^1.1.14"
+    "grunt-jslint": "^1.2.0",
+    "load-grunt-tasks": "^5.0.0"
   },
   "dependencies": {},
   "license": "MIT"
