--- a/wocdb-routes.ini
+++ b/wocdb-routes.ini
@@ -14,6 +14,6 @@ GET /runners/@type/@country [sync] = Result->getStartPageWithRunnersByCountry
 GET /best/@country/@type/@class/@race [sync] = Result->getStartPageWithBestResults
 GET /medals/@group/@type/@class/@race [sync] = Result->getStartPageWithMedals
 
-GET /import/@dir/@wocid [sync] = Import->importEvents
+GET /import/@filetype/@dir/@wocid [sync] = Import->importEvents
 
 GET * [sync] = Woc->getStartPage
