Improved import plus dependency updates

--- a/wocdb-routes.ini
+++ b/wocdb-routes.ini
@@ -15,5 +15,6 @@ GET /best/@country/@type/@class/@race [sync] = Result->getStartPageWithBestResul
 GET /medals/@group/@type/@class/@race [sync] = Result->getStartPageWithMedals
 
 GET /import/@filetype/@dir/@wocid [sync] = Result->import
+GET /import/@filetype/@dir/@wocid/@save [sync] = Result->import
 
 GET * [sync] = Woc->getStartPage
